# zombo_ducks

./: .editorconfig  .eslintrc.json  .gitignore  Makefile  README.md  docker-compose.yml  migrations.json  nginx.conf  nx.json  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.base.json  workspace.json
.github/workflow/: cfp-deploy.yml
.github/workflows/: app-deploy.yml  cfp-deploy.yml  check.yml  deploy.yml  landings-deploy.yml  test.yml  zombofighter-deploy.yml
apps/apps/: .eslintrc.json  jest.config.ts  project.json
apps/apps-e2e/: project.json
apps/apps/pages/: _app.tsx  index.tsx
apps/bar/: jest.config.ts  project.json
apps/bar/src/: index.html
apps/fighter/api/: .env  Dockerfile  project.json  (+1 more)
apps/game-api/: .env  .env.production  jest.config.ts  project.json
apps/game-sandbox/: jest.config.ts  project.json
apps/landing/: ecosystem.config.js  jest.config.ts  project.json
apps/launchpad/: .eslintrc.json  jest.config.ts  next.config.js  project.json
contracts/zombofighter/: Cargo.toml  Makefile
contracts/zombofighter/neardev/: dev-account  dev-account.env
contracts/zombofighter/res/: zombofighter.wasm
contracts/zombofighter/src/: lib.rs
deploy/games-zombofighter-api/: deployment.yml  ingress.yml  service.yml
deploy/games-zombofighter-client/: deployment.yml  service.yml
docker/: games-zombofighter-api.Dockerfile  games-zombofighter-client.Dockerfile
libs/utils/: jest.config.ts  project.json
libs/zombo-fight/: README.md  jest.config.ts  package.json  project.json
nginx/: games-zombofighter-client.conf
(+973 files in other folders)
