[package]
name = "zombofighter"
version = "0.1.2"
publish = false
authors = ["Zombo Fighter <https://github.com/devdammit>"]
edition = "2021"



[lib]
crate-type = ["cdylib"]


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[dependencies]
near-sdk = "4.0.0"
